
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {scalar_t__* queue_serial; scalar_t__ serial; double pts; double pts_drift; double last_updated; double speed; scalar_t__ paused; } ;
typedef TYPE_1__ Clock ;


 double NAN ;
 double av_gettime_relative () ;

__attribute__((used)) static double get_clock(Clock *c)
{
    if (*c->queue_serial != c->serial)
        return NAN;
    if (c->paused) {
        return c->pts;
    } else {
        double time = av_gettime_relative() / 1000000.0;
        return c->pts_drift + time - (time - c->last_updated) * (1.0 - c->speed);
    }
}
